k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexusfs
  labels:
    name: nexusfs
    environment: production
